--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
    <body>
         <header>
-            <img class="logo" src="https://pngimg.com/uploads/apple_logo/apple_logo_PNG19695.png"/>
+            <img class="logo" src="https://vandfrgr.github.io/zoro/skelet.jpg"/>
             
         </header>    
      <main>
