--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             <img class="logo" src="https://vandfrgr.github.io/zoro/skelet.jpg"/>
             
         </header>    
+      <nav>
+          <a class="mainlink" href="">Zoro</a>
+          <a href="">Luffi</a>
+          <a href="">Cheper</a>
+       </nav>    
      <main>
                 <h1> История powerbook</h1>
                <img src="https://applespbevent.ru/content/images/size/w2000/wordpress/2020/10/Powerbook_100.jpg" width="500px"/> <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/540c_open.jpg" width="500px"/> 
