--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <a href="">Cheper</a>
        </nav>    
      <main>
-                <h1> История powerbook</h1>
-               <img src="https://applespbevent.ru/content/images/size/w2000/wordpress/2020/10/Powerbook_100.jpg" width="500px"/> <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/540c_open.jpg" width="500px"/> 
+                <h1> One Piece</h1>
+               <img src="https://vandfrgr.github.io/zoro/main.jpg" width="500px"/>  
 
                 <h2> Cерия PowerBook 100 становится настоящим хитом <img src="https://emojio.ru/images/apple-b/1f44d.png/>" </h2>   
                 
