--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        </nav>    
      <main>
                 <h1> One Piece</h1>
-               <img src="https://vandfrgr.github.io/zoro/main.jpg" width="500px"/>  
+               <img src="https://vandfrgr.github.io/zoro/main.jpg" width="865px" height="646"/>  
 <p> История рассказывает про молодого парня, на котором надета соломенная шляпа. Этого парня зовут именем Монки. Центральный персонаж очень увлекается приключениями. Ещё в детстве ему довелось полакомиться дьявольски фруктом. После этого он превратился в резинового человека. После этого у него произошло появление одной особенности. Он обнаружил, что его тело растягивается. Причём потом приобретает разные размеры. Луффи должен добиться достижения одной цели. Ему хочется быть главным пиратом. Легенды рассказывают, что в первую очередь парень захотел завладеть сокровищами Ван Пис. Очень давно самим Роджером оно было спрятано на территории, где есть течение Гранд Лайн.
 Оно объединило многие острова во всем мире. Потому весельчаку захотелось его непременно найти. Но, это золото Роджера требовалось, как оказалось, не только ему. Иногда можно подумать, что смышленый парень обладает всеми данными, чтобы занять место короля. Он обладатель уникальной силы и острого ума. Ему нужна лишь верная и пред
 Он обладатель уникальной силы и острого ума. Ему нужна лишь верная и преданная команда. Своему капитану она поможет когда угодно. Луффи должен действовать немедленно. Ван Пис скоро наполнится злыми пиратами. Они сделают что угодно, чтобы получить заветное сокровище. Монки должен приложить усилия для того, чтобы одержать победу над врагами.</p>  
