--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 </main>    
           
     </body>    
-    <footer>тел: +7 (495) 777-77-77</footer>
+    <footer>
+        <p> Тел: </p>
+        <p> Эл.почта: </p>
+    
+    </footer>
 </html>    
-<footer>тел: +7 (495) 777-77-77</footer>
+
