--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             
         </header>    
       <nav>
-          <a class="mainlink" href="">Zoro</a>
+          <a class="mainlink" href="https://vandfrgr.github.io/zoro/zoro.html">Zoro</a>
           <a href="">Luffi</a>
           <a href="">Cheper</a>
        </nav>    
