--- a/zoro.html
+++ b/zoro.html
@@ -11,7 +11,7 @@
         </header>    
       <nav>
           <a class="mainlink" href="">Zoro</a>
-          <a href="">Luffi</a>
+          <a href="https://vandfrgr.github.io/zoro/index.html">main</a>
           <a href="">Cheper</a>
        </nav>    
      <main>
